# fairface-id-bias-audit

./: README.md
fairface-id-bias-audit/: LICENSE  README.md  pyproject.toml  requirements-image.txt  requirements.txt
fairface-id-bias-audit/docs/: PROJECT_PROPOSAL_SUMMARY.md
fairface-id-bias-audit/scripts/: run_demo.py  run_pipeline.py
fairface-id-bias-audit/src/fairface_id/: data.py  embeddings.py  metrics.py  pipeline.py  simulate.py  thresholding.py
fairface-id-bias-audit/tests/: test_metrics.py
