[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairface-id-bias-audit"
version = "0.1.0"
description = "Audit and mitigate demographic bias in multiracial face verification systems."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "AI and Systems Science Course Team" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
